# jupyterhub-monitoring

./: .gitignore  .pre-commit-config.yaml  .typos.toml  pyproject.toml  requirements.txt
app/: __init__.py  elasticsearch_client.py  send_email.py
